Fix spacing issue hiding a:focus border on search icon

--- a/src/css/cudl.css
+++ b/src/css/cudl.css
@@ -388,6 +388,10 @@ button {
     font-size: inherit;
 }
 
+.nav-right-items div.search {
+    display: inline-block;
+}
+
 /* Hidden menu */
 
 .dropbtn {
